<resources>
    <string name="app_name">데일리키즈톡</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원 가입</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="check_match_password">비밀번호 확인</string>
    <string name="nickname">닉네임</string>
    <string name="check">중복 확인</string>
    <string name="teacher">교사</string>
    <string name="parent">학부모</string>
    <string name="next">다음</string>
    <string name="password_length">6자 이상으로 입력해 주세요.</string>
    <string name="select_picture">사진 선택</string>
    <string name="daily_notice">알림장</string>
    <string name="album">앨범</string>
    <string name="shuttle">셔틀버스</string>
    <string name="search_kinder">유치원 검색</string>
    <string name="calendar">일정표</string>
    <string name="post">학부모게시판</string>
    <string name="daily">관찰일지</string>
    <string name="menu">식단표</string>
    <string name="notice">공지사항</string>
    <string name="chat_list">채팅방 목록</string>
    <string name="duplicate_email">중복된 이메일이 존재합니다.</string>
    <string name="duplicate_nickname">중복된 닉네임이 존재합니다.</string>
</resources>