<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/home_toolbar"
        layout="@layout/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/home_profile_background"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:layout_constraintWidth_percent="0.6">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/home_imgProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:civ_border_color="@color/yellow"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4"/>

        <TextView
            android:id="@+id/home_tvKinderName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/home_profile_background"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/home_imgProfile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintWidth_percent="0.6"/>

        <TextView
            android:id="@+id/home_tvNickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/home_profile_background"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/home_tvKinderName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintWidth_percent="0.6"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <android.widget.Button
        android:id="@+id/home_btnChatList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_corner"
        android:text="@string/chat_list"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325"
        app:layout_constraintWidth_percent="0.7"/>

    <android.widget.Button
        android:id="@+id/home_btnSearchKinder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_corner"
        android:drawableTop="@drawable/home_search_resize"
        android:drawableTint="@color/white"
        android:text="@string/search_kinder"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/home_btnChatList"
        app:layout_constraintTop_toBottomOf="@id/home_btnChatList"
        app:layout_constraintEnd_toEndOf="@id/home_btnChatList"
        app:layout_constraintVertical_bias="0.27"
        app:layout_constraintHorizontal_bias="0.2"/>

    <android.widget.Button
        android:id="@+id/home_btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/home_btnChatList"
        app:layout_constraintStart_toEndOf="@id/home_btnSearchKinder"
        app:layout_constraintTop_toTopOf="@id/home_btnSearchKinder"
        app:layout_constraintBottom_toBottomOf="@id/home_btnSearchKinder"
        android:drawableTop="@drawable/home_post_resize"
        android:text="@string/post"
        android:textColor="@color/white"
        android:drawableTint="@color/white"
        android:background="@drawable/btn_corner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/home_profile_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/notice"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/home_tvNotice1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="end"
                android:singleLine="true"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/home_tvNoticeDate1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/home_tvNotice2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="end"
                android:singleLine="true"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/home_tvNoticeDate2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/home_tvNotice3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="end"
                android:singleLine="true"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/home_tvNoticeDate3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/home_tvNotice4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="end"
                android:singleLine="true"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/home_tvNoticeDate4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>